syntax = "proto3";
package kratos.api;

option go_package = "github.com/go-kratos/user-client-micro/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  JWT jwt = 3;

}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }

  HTTP http = 1;
  GRPC grpc = 2;
}
message JWT{
  string service_secret_key = 1;
}
message Data {
  message Database {
    string dsn = 1;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
    string password = 5;
    int32 db = 6;
  }
  Database database = 1;
  Redis redis = 2;
}

message Registry{
  message Etcd{
    repeated string endpoints = 1;
    google.protobuf.Duration dialTimeout = 2;
  }
  Etcd etcd = 1;
}